# ChangeLog for net-misc/leechcraft-cstp
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/leechcraft-cstp/ChangeLog,v 1.4 2011/12/16 18:41:10 maksbotan Exp $

*leechcraft-cstp-0.4.96-r1 (16 Dec 2011)

  16 Dec 2011; Maxim Koltsov <maksbotan@gentoo.org>
  -leechcraft-cstp-0.4.96.ebuild, +leechcraft-cstp-0.4.96-r1.ebuild,
  leechcraft-cstp-9999.ebuild:
  Bump to eapi4, fix bug 394935

*leechcraft-cstp-0.4.96 (15 Dec 2011)

  15 Dec 2011; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-cstp-0.4.96.ebuild:
  Bump net-misc/leechcraft-cstp to 0.4.96, thanks to 0xd34df00d

*leechcraft-cstp-0.4.90 (14 Sep 2011)

  14 Sep 2011; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-cstp-0.4.90.ebuild:
  Bump net-misc/leechcraft-cstp to 0.4.90, thanks to 0xd34df00d

*leechcraft-cstp-9999 (23 Aug 2011)
*leechcraft-cstp-0.4.85 (23 Aug 2011)

  23 Aug 2011; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-cstp-0.4.85.ebuild, +leechcraft-cstp-9999.ebuild, +metadata.xml:
  Copy net-misc/leechcraft-cstp from rion-overlay, thanks to 0xd34df00d
