@@ -1,17 +1,0 @@
-# Copyright 1999-2011 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/leechcraft-cstp/leechcraft-cstp-0.4.85.ebuild,v 1.1 2011/08/23 19:01:44 maksbotan Exp $
-
-EAPI="2"
-
-inherit leechcraft
-
-DESCRIPTION="CSTP, the clean & stupid HTTP implementation for LeechCraft."
-
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
-IUSE="debug"
-
-DEPEND="=net-misc/leechcraft-core-${PV}"
-RDEPEND="${DEPEND}
-		virtual/leechcraft-task-show"
