@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/leechcraft-cstp
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/leechcraft-cstp/ChangeLog,v 1.4 2011/12/16 18:41:10 maksbotan Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/leechcraft-cstp/ChangeLog,v 1.5 2011/12/31 12:11:18 maksbotan Exp $
+
+*leechcraft-cstp-0.4.97 (31 Dec 2011)
+
+  31 Dec 2011; Maxim Koltsov <maksbotan@gentoo.org>
+  -leechcraft-cstp-0.4.85.ebuild, -leechcraft-cstp-0.4.90.ebuild,
+  +leechcraft-cstp-0.4.97.ebuild:
+  Bump to 0.4.97, remove 0.4.80 and 0.4.90
 
 *leechcraft-cstp-0.4.96-r1 (16 Dec 2011)
 
